tests/spec/compile-fail/018_return_read_parameter_as_owner.zn
// category: compile-fail
// profile: freestanding
// purpose: default read parameters cannot be returned as owned values

module tests.fail.returnReadParameterAsOwner;

struct Packet {
    bytes: Array<U8>,
}

fn bad(packet: Packet) -> Packet {
    return packet; // expected-error: read parameter is not owned
}
